--- a/src/login.html
+++ b/src/login.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="login.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="defaultTexturepack.css" />
 	<script defer>
 		// owo
 	</script>
@@ -12,16 +12,18 @@
 	<title>Nexcord</title>
 </head>
 <body>
-	<div class="wrapper">
-		<div class="splitter">
-			<div class="panel">
-				<form action="#">
-					<label for="username">Username</label><input id="username" type="text"/>
-					<label for="password">Password</label><input id="password" type="password"/>
-					<input type="submit" value="Login"/>
-				</form>
+	<div class="wrapper bg-login">
+		<div class="f vf fcf1">
+			<div class="wrapper f fcenter">
+				<div class="panel">
+					<form action="#">
+						<label for="username">Username</label><input id="username" type="text"/>
+						<label for="password">Password</label><input id="password" type="password"/>
+						<input type="submit" value="Login"/>
+					</form>
+				</div>
 			</div>
-			<div class="small">Nexcord is not affiliated with Discord App.</div>
+			<div class="small p2">Nexcord is not affiliated with Discord App.</div>
 		</div>
 	</div>
 </body>
