adds fonts small css tweaks

--- a/src/login.html
+++ b/src/login.html
@@ -17,13 +17,13 @@
 			<div class="wrapper f fcenter">
 				<div class="panel">
 					<form action="#">
-						<label for="username">Username</label><input id="username" type="text"/>
-						<label for="password">Password</label><input id="password" type="password"/>
+						<label for="username">USERNAME</label><input id="username" type="text"/>
+						<label for="password">PASSWORD</label><input id="password" type="password"/>
 						<input type="submit" value="Login"/>
 					</form>
 				</div>
 			</div>
-			<div class="small p2">Nexcord is not affiliated with Discord App.</div>
+			<div class="small p2 semiwide">Nexcord is not affiliated with Discord App.</div>
 		</div>
 	</div>
 </body>
