--- a/src/login.html
+++ b/src/login.html
@@ -16,8 +16,11 @@
 		<div class="f vf fcf1">
 			<div class="wrapper f fcenter">
 				<div class="panel">
+					<h3 class="tcenter lp2 rp2">Welcome back!</h3>
+					<h5 class="tcenter o50 lp2 bp03 rp2">We're so excited to see you again</h5>
+
 					<form action="#">
-						<label for="username">USERNAME</label><input id="username" type="text"/>
+						<label for="username">EMAIL</label><input id="username" type="email"/>
 						<label for="password">PASSWORD</label><input id="password" type="password"/>
 						<input type="submit" value="Login"/>
 					</form>
