--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,22 @@
 	<title>Manex</title>
 </head>
 <body>
-	<!-- oh god -->
+	<div class="wrapper">
+		<div class="room-list-container">
+			<div class="room-menu"></div>
+			<div class="room-list"></div>
+			<div class="main-menu"></div>
+		</div>
+		<div class="content">
+			<div class="titlebar"></div>
+			<div class="content-divider">
+				<div class="message-list-container">
+					<div class="message-list"></div>
+					<div class="messagebox"></div>
+				</div>
+				<div class="member-list"></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
