--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,42 @@
 	<title>Manex</title>
 </head>
 <body>
-	<div class="wrapper">
+	<div id="login-wrapper" class="wrapper login">
+		<div class="titlebar">
+			<div class="left"></div>
+			<div class="actions">
+				<div class="minimize"></div>
+				<div class="maximize"></div>
+				<div class="close"></div>
+			</div>
+		</div>
+		<div class="panel">
+			<h1>Login to Matrix</h1>
+			<form onsubmit="return false">
+				<input id="login-username" type="text" placeholder="username">
+				<div></div>
+				<input id="login-password" type="password" placeholder="password">
+				<div></div>
+				<input id="login-submit" type="submit" value="login">
+			</form>
+		</div>
+	</div>
+
+	<div id="chat-wrapper" class="wrapper chat disabled">
 		<div class="room-list-container">
 			<div class="room-menu"></div>
 			<div class="room-list"></div>
 			<div class="main-menu"></div>
 		</div>
 		<div class="content">
-			<div class="titlebar"></div>
+			<div class="titlebar">
+				<div class="left"></div>
+				<div class="actions">
+					<div class="minimize"></div>
+					<div class="maximize"></div>
+					<div class="close"></div>
+				</div>
+			</div>
 			<div class="content-divider">
 				<div class="message-list-container">
 					<div class="message-list"></div>
