add loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
 	<title>Manex</title>
 </head>
 <body>
+	<div id="loading-splash" class="splash">
+		<div class="logo"></div>
+	</div>
+
 	<div id="login-wrapper" class="wrapper login">
 		<div class="titlebar">
 			<div class="left"></div>
