--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
 			</div>
 		</div>
 		<div class="panel">
-			<h1>Login to Matrix</h1>
-			<form onsubmit="return false">
-				<input id="login-username" type="text" placeholder="username">
+			<h2>Login to Matrix</h2>
+			<form id="login-form" onsubmit="return false">
+				<input id="login-username" type="text" required placeholder="username">
 				<div></div>
-				<input id="login-password" type="password" placeholder="password">
+				<input id="login-password" type="password" required placeholder="password">
 				<div></div>
 				<input id="login-submit" type="submit" value="login">
 			</form>
