--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 	<div id="chat-wrapper" class="wrapper chat disabled">
 		<div class="room-list-container">
 			<div class="room-menu"></div>
-			<div class="room-list"></div>
+			<div id="room-list" class="room-list"></div>
 			<div class="main-menu"></div>
 		</div>
 		<div class="content">
@@ -51,10 +51,10 @@
 			</div>
 			<div class="content-divider">
 				<div class="message-list-container">
-					<div class="message-list"></div>
+					<div id="message-list" class="message-list"></div>
 					<div class="messagebox"></div>
 				</div>
-				<div class="member-list"></div>
+				<div id="member-list" class="member-list"></div>
 			</div>
 		</div>
 	</div>
