add message sending

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,11 @@
 			<div class="content-divider">
 				<div class="message-list-container">
 					<div id="message-list" class="message-list"></div>
-					<div class="messagebox"></div>
+					<div class="messagebox">
+						<form id="messagebox-form" onsubmit="return false">
+							<input id="messagebox" type="text" placeholder="Send Message">
+						</form>
+					</div>
 				</div>
 				<div id="member-list" class="member-list"></div>
 			</div>
