refactor and room title

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
 	<div id="chat-wrapper" class="wrapper chat disabled">
 		<div class="room-list-container">
-			<div class="room-menu"></div>
+			<div id="room-menu" class="room-menu">Manex</div>
 			<div id="room-list" class="room-list"></div>
 			<div class="main-menu"></div>
 		</div>
