--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,10 @@
 
 	<div id="chat-wrapper" class="wrapper chat disabled">
 		<div class="room-list-container">
-			<div id="room-menu" class="room-menu">Manex</div>
+			<div class="room-menu">
+				<div id="room-close" class="back disabled"></div>
+				<div id="room-title" class="room-title">Manex</div>
+			</div>
 			<div id="room-list" class="room-list"></div>
 			<div class="main-menu"></div>
 		</div>
