--- a/src/index.html
+++ b/src/index.html
@@ -55,13 +55,13 @@
 			<div class="content-divider">
 				<div class="message-list-container">
 					<div id="message-list" class="message-list"></div>
-					<div class="messagebox">
-						<form id="messagebox-form" class="disabled" onsubmit="return false">
+					<div id="messagebox-form-container" class="messagebox disabled">
+						<form id="messagebox-form" onsubmit="return false">
 							<input id="messagebox" type="text" placeholder="Send Message">
 						</form>
 					</div>
 				</div>
-				<div id="member-list" class="member-list"></div>
+				<div id="member-list" class="member-list disabled"></div>
 			</div>
 		</div>
 	</div>
