add dialogs and image zooming

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 		<div class="logo"></div>
 	</div>
 
+	<div id="dialog" class="dialog hidden"></div>
+
 	<div id="login-wrapper" class="wrapper login">
 		<div class="titlebar">
 			<div class="left"></div>
