add context menus

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
 		<div class="logo"></div>
 	</div>
 
+	<div id="context-container" class="context-container hidden">
+		<div id="context" class="context"></div>
+	</div>
+
 	<div id="dialog" class="dialog hidden"></div>
 
 	<div id="login-wrapper" class="wrapper login">
