--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 				<div id="room-title" class="room-title">Manex</div>
 			</div>
 			<div id="room-list" class="room-list"></div>
-			<div class="main-menu"></div>
+			<div id="main-menu" class="main-menu"></div>
 		</div>
 		<div class="content">
 			<div class="titlebar">
