--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,9 @@
 			<h2>Login to Matrix</h2>
 			<form id="login-form" onsubmit="return false">
 				<input id="login-username" type="text" required placeholder="username">
+				<div></div>
 				<input id="login-password" type="password" required placeholder="password">
+				<div></div>
 				<input id="login-submit" type="submit" value="login">
 			</form>
 		</div>
