--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport"content="width= device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="manex.css">
 	<script defer src="manex.js"></script>
 	<title>Manex</title>
@@ -31,9 +31,9 @@
 		<div class="panel">
 			<h2>Login to Matrix</h2>
 			<form id="login-form" onsubmit="return false">
-				<input id="login-username" type="text" required placeholder="username">
+				<input id="login-username" type="text" placeholder="username" required>
 				<div></div>
-				<input id="login-password" type="password" required placeholder="password">
+				<input id="login-password" type="password" placeholder="password" required>
 				<div></div>
 				<input id="login-submit" type="submit" value="login">
 			</form>
