add commands list

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
 			<div class="content-divider">
 				<div class="message-list-container">
 					<div id="message-list" class="message-list"></div>
+					<div id="command-container" class="command-container disabled"></div>
 					<div id="messagebox-form-container" class="messagebox disabled">
 						<form id="messagebox-form" onsubmit="return false">
 							<input id="messagebox" type="text" placeholder="Send Message">
