add network connection indicator (pls use this to handle sdk 404 errors or smth)

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 		<div class="logo"></div>
 	</div>
 
+	<div id="indicator-connection" class="indicator-connection"></div>
+
 	<div id="context-container" class="context-container hidden">
 		<div id="context" class="context"></div>
 	</div>
