--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport"content="width= device-width, initial-scale=1">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' https://matrix.org data:">
 	<link rel="stylesheet" type="text/css" media="screen" href="manex.css">
 	<script defer src="manex.js"></script>
 	<title>Manex</title>
