fuck content policy it can suck my ass

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"content="width= device-width, initial-scale=1">
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self' https://matrix.org data:">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://matrix.org data:">
 	<link rel="stylesheet" type="text/css" media="screen" href="manex.css">
 	<script defer src="manex.js"></script>
 	<title>Manex</title>
